--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1256,7 +1256,9 @@
                 "deposit": "Deposit",
                 "service": "Service",
                 "product": "Product",
-                "type": "Type"
+                "type": "Type",
+                "legalId": "Legal ID",
+                "vatId": "VAT ID"
             },
             "defaultLabels": {
                 "invoice": "Invoice",
@@ -1292,7 +1294,9 @@
                 "deposit": "Deposit",
                 "service": "Service",
                 "product": "Product",
-                "type": "Type"
+                "type": "Type",
+                "legalId": "Legal ID",
+                "vatId": "VAT ID"
             },
             "preview": {
                 "title": "Preview",
