✨ feat: add exempt VAT option in settings - Introduce a new setting for exempt VAT - Add label and description for the exempt VAT feature - Ensure legal notice is displayed on future documents for France

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1043,6 +1043,10 @@
                         "required": "Date format is required"
                     }
                 },
+                "exemptVat": {
+                    "label": "TVA unapplicable",
+                    "description": "Display the legal notice 'VAT not applicable, art. 293 B of the CGI' on future documents when enabled and if the company's country is France."
+                },
                 "saving": "Saving...",
                 "saveSettings": "Save Settings"
             },
