✨ feat: add actions for payment methods - Introduce action labels for payment methods: cancel, add, save, edit, delete, deleting - Update French translation for payment methods actions - Update English translation for payment methods actions

--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -749,6 +749,14 @@
     "title": "Zahlungsmethoden",
     "description": "Verwalten Sie wiederverwendbare Zahlungsmethoden (IBAN, PayPal, Bargeld...)",
     "empty": "Noch keine Zahlungsmethoden",
+    "actions": {
+      "cancel": "Abbrechen",
+      "add": "Hinzufügen",
+      "save": "Speichern",
+      "edit": "Bearbeiten",
+      "delete": "Löschen",
+      "deleting": "Lösche..."
+    },
     "search": {
       "placeholder": "Zahlungsmethoden suchen..."
     },
