--- a/frontend/src/locales/de/translation.json
+++ b/frontend/src/locales/de/translation.json
@@ -1193,7 +1193,11 @@
         "addSuccess": "Plugin erfolgreich hinzugefügt",
         "addError": "Fehler beim Hinzufügen des Plugins",
         "deleteSuccess": "Plugin erfolgreich gelöscht",
-        "deleteError": "Fehler beim Löschen des Plugins"
+        "deleteError": "Fehler beim Löschen des Plugins",
+        "toggleSuccess": "Plugin erfolgreich umgeschaltet",
+        "toggleError": "Fehler beim Umschalten des Plugins",
+        "configureSuccess": "Plugin erfolgreich konfiguriert",
+        "configureError": "Fehler beim Konfigurieren des Plugins"
       }
     },
     "pdfTemplates": {
