--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1193,7 +1193,11 @@
                 "addSuccess": "Plugin added successfully",
                 "addError": "Failed to add plugin",
                 "deleteSuccess": "Plugin deleted successfully",
-                "deleteError": "Failed to delete plugin"
+                "deleteError": "Failed to delete plugin",
+                "toggleSuccess": "Plugin toggled successfully",
+                "toggleError": "Failed to toggle plugin",
+                "configureSuccess": "Plugin configured successfully",
+                "configureError": "Failed to configure plugin"
             }
         },
         "pdfTemplates": {
