🌐 i18n: Update French translations for payment methods and add webhook configuration instructions

--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -748,98 +748,98 @@
         "title": "Méthodes de paiement",
         "description": "Gérez des méthodes de paiement réutilisables (IBAN, PayPal, Espèces...)",
         "actions": {
-          "cancel": "Annuler",
-          "add": "Ajouter",
-          "save": "Enregistrer",
-          "edit": "Modifier",
-          "delete": "Supprimer",
-          "deleting": "Suppression..."
+            "cancel": "Annuler",
+            "add": "Ajouter",
+            "save": "Enregistrer",
+            "edit": "Modifier",
+            "delete": "Supprimer",
+            "deleting": "Suppression..."
         },
         "search": {
-          "placeholder": "Rechercher des méthodes de paiement..."
+            "placeholder": "Rechercher des méthodes de paiement..."
         },
         "list": {
-          "add": "Ajouter une méthode de paiement",
-          "empty": "Aucune méthode de paiement pour le moment"
+            "add": "Ajouter une méthode de paiement",
+            "empty": "Aucune méthode de paiement pour le moment"
         },
         "stats": {
-          "total": "Total des méthodes de paiement",
-          "active": "Actives",
-          "inactive": "Inactives"
+            "total": "Total des méthodes de paiement",
+            "active": "Actives",
+            "inactive": "Inactives"
         },
         "fields": {
-          "name": {
-            "label": "Nom",
-            "placeholder": "ex: Virement bancaire (pro)"
-          },
-          "details": {
-            "label": "Détails",
-            "placeholder": "IBAN, email PayPal, ..."
-          },
-          "type": {
-            "label": "Type",
-            "bank_transfer": "Virement bancaire",
-            "paypal": "PayPal",
-            "check": "Chèque",
-            "cash": "Espèces",
-            "other": "Autre"
-          },
-          "status": {
-            "label": "Statut"
-          }
-        },
-        "upsert": {
-          "title": {
-            "create": "Ajouter une méthode de paiement",
-            "edit": "Modifier la méthode de paiement"
-          },
-          "form": {
             "name": {
-              "label": "Nom",
-              "placeholder": "ex: Virement bancaire (pro)"
+                "label": "Nom",
+                "placeholder": "ex: Virement bancaire (pro)"
             },
             "details": {
-              "label": "Détails",
-              "placeholder": "IBAN, email PayPal, ..."
+                "label": "Détails",
+                "placeholder": "IBAN, email PayPal, ..."
             },
             "type": {
-              "label": "Type",
-              "options": {
+                "label": "Type",
                 "bank_transfer": "Virement bancaire",
                 "paypal": "PayPal",
                 "check": "Chèque",
                 "cash": "Espèces",
                 "other": "Autre"
-              }
+            },
+            "status": {
+                "label": "Statut"
             }
-          },
-          "messages": {
+        },
+        "upsert": {
+            "title": {
+                "create": "Ajouter une méthode de paiement",
+                "edit": "Modifier la méthode de paiement"
+            },
+            "form": {
+                "name": {
+                    "label": "Nom",
+                    "placeholder": "ex: Virement bancaire (pro)"
+                },
+                "details": {
+                    "label": "Détails",
+                    "placeholder": "IBAN, email PayPal, ..."
+                },
+                "type": {
+                    "label": "Type",
+                    "options": {
+                        "bank_transfer": "Virement bancaire",
+                        "paypal": "PayPal",
+                        "check": "Chèque",
+                        "cash": "Espèces",
+                        "other": "Autre"
+                    }
+                }
+            },
+            "messages": {
+                "addSuccess": "Méthode de paiement ajoutée",
+                "addError": "Échec de l'ajout de la méthode de paiement",
+                "updateSuccess": "Méthode de paiement mise à jour",
+                "updateError": "Échec de la mise à jour de la méthode de paiement",
+                "deleteSuccess": "Méthode de paiement supprimée",
+                "deleteError": "Échec de la suppression de la méthode de paiement"
+            }
+        },
+        "messages": {
+            "nameRequired": "Le nom est requis",
             "addSuccess": "Méthode de paiement ajoutée",
             "addError": "Échec de l'ajout de la méthode de paiement",
             "updateSuccess": "Méthode de paiement mise à jour",
             "updateError": "Échec de la mise à jour de la méthode de paiement",
             "deleteSuccess": "Méthode de paiement supprimée",
             "deleteError": "Échec de la suppression de la méthode de paiement"
-          }
-        },
-        "messages": {
-          "nameRequired": "Le nom est requis",
-          "addSuccess": "Méthode de paiement ajoutée",
-          "addError": "Échec de l'ajout de la méthode de paiement",
-          "updateSuccess": "Méthode de paiement mise à jour",
-          "updateError": "Échec de la mise à jour de la méthode de paiement",
-          "deleteSuccess": "Méthode de paiement supprimée",
-          "deleteError": "Échec de la suppression de la méthode de paiement"
         },
         "tooltips": {
-          "view": "Voir",
-          "edit": "Modifier",
-          "delete": "Supprimer"
+            "view": "Voir",
+            "edit": "Modifier",
+            "delete": "Supprimer"
         },
         "delete": {
-          "description": "Êtes-vous sûr de vouloir supprimer \"{{name}}\" ? Cette action ne peut pas être annulée."
+            "description": "Êtes-vous sûr de vouloir supprimer \"{{name}}\" ? Cette action ne peut pas être annulée."
         }
-      },
+    },
     "settings": {
         "tabs": {
             "company": "Entreprise",
@@ -1628,5 +1628,26 @@
         "invoiced": "Facturé (TTC)",
         "revenue": "Chiffre d'affaire (HT)",
         "deposits": "Encaissements (facture payée)"
+    },
+    "webhook": {
+        "instructions": {
+            "documenso": {
+                "title": "Instructions pour la configuration du webhook Documenso :",
+                "step1": "1. Accédez à votre panneau d'administration Documenso",
+                "step2": "2. Configurez l'URL du webhook",
+                "step3": "3. Configurez le secret du webhook",
+                "step4": "4. Activez les événements suivants : document.signed (minimum requis)",
+                "step5": "5. Événements supplémentaires que vous pouvez activer : document.pending, document.completed, document.rejected"
+            }
+        },
+        "modal": {
+            "title": "Configuration du webhook pour {{pluginName}}",
+            "url": "URL du webhook",
+            "secret": "Secret du webhook",
+            "secretDescription": "Gardez ce secret sécurisé. Il sera utilisé pour vérifier l'authenticité du webhook.",
+            "instructions": "Instructions de configuration",
+            "warning": "Configurez à la fois l'URL et le secret du webhook dans les paramètres de {{pluginName}} pour recevoir des mises à jour authentifiées en temps réel. Stockez le secret en sécurité - il ne sera plus affiché.",
+            "gotIt": "Compris !"
+        }
     }
 }
