🌐 i18n: Update webhook validation messages and add webhook section in translations

--- a/frontend/src/locales/en/translation.json
+++ b/frontend/src/locales/en/translation.json
@@ -1197,7 +1197,12 @@
                 "toggleSuccess": "Plugin toggled successfully",
                 "toggleError": "Failed to toggle plugin",
                 "configureSuccess": "Plugin configured successfully",
-                "configureError": "Failed to configure plugin"
+                "configureError": "Failed to configure plugin",
+                "validateSuccess": "Plugin validated and webhook configured successfully!",
+                "validateError": "Failed to validate plugin"
+            },
+            "webhook": {
+                "secretPlaceholder": "Validate that popup to generate secure secret"
             }
         },
         "pdfTemplates": {
