--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1197,9 +1197,7 @@
                 "toggleSuccess": "Plugin basculé avec succès",
                 "toggleError": "Erreur lors du basculement du plugin",
                 "configureSuccess": "Plugin configuré avec succès",
-                "configureError": "Erreur lors de la configuration du plugin",
-                "validateSuccess": "Plugin validé et webhook configuré avec succès !",
-                "validateError": "Erreur lors de la validation du plugin"
+                "configureError": "Erreur lors de la configuration du plugin"
             },
             "webhook": {
                 "secretPlaceholder": "Validez cette popup pour générer un secret sécurisé"
