--- a/frontend/src/locales/es/translation.json
+++ b/frontend/src/locales/es/translation.json
@@ -1197,9 +1197,7 @@
                 "toggleSuccess": "Plugin alternado correctamente",
                 "toggleError": "No se pudo alternar el plugin",
                 "configureSuccess": "Plugin configurado correctamente",
-                "configureError": "No se pudo configurar el plugin",
-                "validateSuccess": "¡Plugin validado y webhook configurado correctamente!",
-                "validateError": "No se pudo validar el plugin"
+                "configureError": "No se pudo configurar el plugin"
             },
             "webhook": {
                 "secretPlaceholder": "Valide esta ventana emergente para generar un secreto seguro"
