--- a/frontend/src/locales/fr/translation.json
+++ b/frontend/src/locales/fr/translation.json
@@ -1370,6 +1370,9 @@
                 "type": "Type",
                 "events": "Événements",
                 "button": "Créer le webhook"
+            },
+            "card": {
+                "events": "Écoute les événements : {{events}}"
             }
         }
     },
